Fixed warnings in SeekBarPreferences